--- a/src/styles/navbar.sass
+++ b/src/styles/navbar.sass
@@ -21,6 +21,7 @@ header
         @include mixins.mobile
             display: block
     .responsive
+        display: initial
         @include mixins.mobile
             display: none
     a
