--- a/src/styles/movie.sass
+++ b/src/styles/movie.sass
@@ -8,6 +8,9 @@
             height: 90vh
             display: block
             margin: 10px auto
+            @include mixins.mobile
+                width: 100%
+                height: auto
     .info
         text-align: center
         background-color: variables.$lightDark
