--- a/src/styles/movie.sass
+++ b/src/styles/movie.sass
@@ -33,6 +33,7 @@
             font-weight: 300
             @include mixins.mobile
                 width: 98%
+                text-align: justify
         .vote
             &-star 
                 color: variables.$colorPrincipal          
