--- a/src/styles/search.sass
+++ b/src/styles/search.sass
@@ -21,4 +21,5 @@ div
             grid-template-columns: repeat(2,1fr)
          @include mixins.mobile-sm
             grid-template-columns: repeat(1,1fr)   
+            gap: 10px
            
