--- a/src/styles/movie.sass
+++ b/src/styles/movie.sass
@@ -27,6 +27,9 @@
         .genres
             @include mixins.flex-config
             gap: 5px
+            @include mixins.mobile-sm
+                display:block
+                margin: 2px auto
         .overview
             width: 60%
             margin: 0 auto
