--- a/src/styles/movie.sass
+++ b/src/styles/movie.sass
@@ -28,8 +28,7 @@
             @include mixins.flex-config
             gap: 5px
             @include mixins.mobile-sm
-                display:block
-                margin: 2px auto
+                flex-wrap: wrap
         .overview
             width: 60%
             margin: 0 auto
