--- a/src/styles/movie.sass
+++ b/src/styles/movie.sass
@@ -27,7 +27,7 @@
         .genres
             @include mixins.flex-config
             gap: 5px
-            @include mixins.mobile-sm
+            @include mixins.mobile
                 flex-wrap: wrap
         .overview
             width: 60%
